--- a/ms/quercus.tex
+++ b/ms/quercus.tex
@@ -68,21 +68,19 @@ humanities; mental model
 \hypertarget{introduction}{%
 \section{Introduction}\label{introduction}}
 
-Introduction here.
+The great majority of dart point types recovered from archaeological
+sites in the American Southeast are defined on the basis of shape, which
+is the defining characteristic of a morphological type \citep{RN8233}.
 
 \hypertarget{acknowledgments}{%
 \section*{Acknowledgments}\label{acknowledgments}}
 \addcontentsline{toc}{section}{Acknowledgments}
 
-We extend our gratitude to the Caddo Nation of Oklahoma, the Williamson
-Museum at Northwestern State University, the Louisiana State Exhibit
-Museum, the Texas Archeological Research Laboratory at The University of
-Texas at Austin, the Brazos Valley Museum of Natural History, the Texas
-Parks and Wildlife Department, and the Sam Noble Oklahoma Museum of
-Natural Science for the requisite permissions and access needed to
-generate 3D scans of the Gahagan bifaces. Thanks to Harry J. Shafer,
-Hiram F. (Pete) Gregory, Christian S. Hoggard, and David K. Thulman for
-their comments on the analyses of Gahagan biface shape.
+We extend our gratitude to the Poverty Point World Heritage Site,
+University of Arkansas Museum, and Texas Archeological Research
+Laboratory for the requisite permissions and access needed to generate
+scans of the Gary dart points. Thanks to \ldots{} for their comments on
+the analysis of Gary dart point shape.
 
 RZS extends his gratitude to Christian S. Hoggard and David K. Thulman
 for their thoughtful comments and constructive criticisms of the
@@ -107,12 +105,11 @@ Preservation Technology and Training grant (P14AP00138) to RZS from the
 National Center for Preservation Technology and Training (NCPTT), and
 additional grants to RZS from the Caddo Tribe of Oklahoma, National
 Forests and Grasslands in Texas (15-PA-11081300-033) and the United
-States Forest Service (20-PA-11081300-074). Funding to scan the Gahagan
-bifaces at the Williamson Museum at Northwestern State University,
-Louisiana State Exhibit Museum, Texas Archeological Research Laboratory
-at The University of Texas at Austin, and Sam Noble Oklahoma Museum of
-Natural Science was provided to the RZS by the Heritage Research Center
-at Stephen F. Austin State University.
+States Forest Service (20-PA-11081300-074). Funding to scan the Gary
+dart points from the Poverty Point World Heritage Site, University of
+Arkansas Museum, and Texas Archeological Research Laboratory was
+provided to RZS by the National Forests ad Grasslands in Texas
+(15-PA-11081300-033).
 
 \hypertarget{data-management}{%
 \section*{Data management}\label{data-management}}
