--- a/ms/interactcadsample.bib
+++ b/ms/interactcadsample.bib
@@ -243,5 +243,25 @@
    type = {Book}
 }
 
+@article{RN5764,
+   author = {Suhm, Dee Ann and Krieger, Alex D. and Jelks, Edward B.},
+   title = {An Introductory Handbook of Texas Archeology},
+   journal = {Bulletin of the Texas Archeological Society},
+   volume = {25},
+   pages = {1-562},
+   year = {1954},
+   type = {Journal Article}
+}
+
+@article{RN6840,
+   author = {Suhm, Dee Ann},
+   title = {Handbook of Texas Archeology: Type Descriptions. A Cumulative Compendium of Type Descriptions},
+   journal = {The Texas Memorial Museum Bulletin},
+   volume = {4},
+   pages = {1-297},
+   year = {1962},
+   type = {Journal Article}
+}
+
 
 
