--- a/ms/quercus.Rmd
+++ b/ms/quercus.Rmd
@@ -1,6 +1,6 @@
 ---
 title: |
-  A potential biological correlate of _design intent_ for Gary dart points from the American Southeast?
+  A potential biological correlate of design intent for Gary dart points from the American Southeast
 type: ORIGINAL RESEARCH ARTICLE
 author:
   - name: Robert Z. Selden, Jr.
@@ -21,7 +21,7 @@ appendix: appendix.tex
 abstract: |
   Abstract here.
 keywords: |
-  archaeoinformatics; geometric morphometrics; museum studies; digital humanities; mental model
+  archaeoinformatics; geometric morphometrics; museum studies; digital humanities; mental model; _Quercus nigra_
 header-includes: |
   \usepackage{hyperref}
   \usepackage[utf8]{inputenc}
@@ -31,13 +31,11 @@ output: rticles::tf_article
 
 # Introduction
 
-The great majority of dart point types recovered from archaeological sites in the American Southeast are defined on the basis of shape, which is the defining characteristic of a morphological type \citep{RN8233}. 
+The majority of dart point types recovered from archaeological sites in the American Southeast---to include Gary dart points---have been identified on the basis of shape attributes \citep{RN5764,RN6840}; the defining characteristic of a morphological type \citep{RN8233}. 
 
 # Acknowledgments {-}
 
-We extend our gratitude to the Poverty Point World Heritage Site, University of Arkansas Museum, and Texas Archeological Research Laboratory for the requisite permissions and access needed to generate scans of the Gary dart points. Thanks to ... for their comments on the analysis of Gary dart point shape.
-
-RZS extends his gratitude to Christian S. Hoggard and David K. Thulman for their thoughtful comments and constructive criticisms of the landmarking protocol used in this study ([`LM3d1`](https://github.com/aksel-blaise/gahaganmorph2/blob/master/analysis/landmarking-protocol.md)), as well as the landmarking protocol for Gahagan bifaces that will be used in the next iteration of these analytical efforts ([`LM3d2`](https://seldenlab.github.io/gahaganmorph.3/landmarking-protocol-3d2.html)); to Martin Hinz for fielding questions related to the `oxcAAR` package and Derek Hamilton for his guidance with the chronological models; and to Dean C. Adams, Michael L. Collyer, Emma Sherratt, Lauren Butaric, and Kersten Bergstrom for their constructive criticisms, general comments, and suggestions throughout the development of this research program.
+We extend our gratitude to the Poverty Point World Heritage Site, University of Arkansas Museum, and Texas Archeological Research Laboratory for the requisite permissions and access needed to generate scans of the Gary dart points from the Cooper, Means, Miller, Poverty Point, and Yarbrough sites. Thanks to ... for their comments on the analysis, and to Dean C. Adams, Michael L. Collyer, Emma Sherratt, Lauren Butaric, and Kersten Bergstrom for their constructive criticisms, general comments, and suggestions throughout the development of this research program.
 
 # Funding {-}
 
