--- a/ms/quercus.tex
+++ b/ms/quercus.tex
@@ -38,8 +38,8 @@
 
 \articletype{ORIGINAL RESEARCH ARTICLE}
 
-\title{A potential biological correlate of \emph{design intent} for Gary
-dart points from the American Southeast?}
+\title{A potential biological correlate of design intent for Gary dart
+points from the American Southeast}
 
 
 \author{\name{Robert Z. Selden, Jr.$^{a}$, John E. Dockall$^{b}$}
@@ -62,15 +62,16 @@ Abstract here.
 
 \begin{keywords}
 archaeoinformatics; geometric morphometrics; museum studies; digital
-humanities; mental model
+humanities; mental model; \emph{Quercus nigra}
 \end{keywords}
 
 \hypertarget{introduction}{%
 \section{Introduction}\label{introduction}}
 
-The great majority of dart point types recovered from archaeological
-sites in the American Southeast are defined on the basis of shape, which
-is the defining characteristic of a morphological type \citep{RN8233}.
+The majority of dart point types recovered from archaeological sites in
+the American Southeast---to include Gary dart points---have been
+identified on the basis of shape attributes \citep{RN5764,RN6840}; the
+defining characteristic of a morphological type \citep{RN8233}.
 
 \hypertarget{acknowledgments}{%
 \section*{Acknowledgments}\label{acknowledgments}}
@@ -79,20 +80,10 @@ is the defining characteristic of a morphological type \citep{RN8233}.
 We extend our gratitude to the Poverty Point World Heritage Site,
 University of Arkansas Museum, and Texas Archeological Research
 Laboratory for the requisite permissions and access needed to generate
-scans of the Gary dart points. Thanks to \ldots{} for their comments on
-the analysis of Gary dart point shape.
-
-RZS extends his gratitude to Christian S. Hoggard and David K. Thulman
-for their thoughtful comments and constructive criticisms of the
-landmarking protocol used in this study
-(\href{https://github.com/aksel-blaise/gahaganmorph2/blob/master/analysis/landmarking-protocol.md}{\texttt{LM3d1}}),
-as well as the landmarking protocol for Gahagan bifaces that will be
-used in the next iteration of these analytical efforts
-(\href{https://seldenlab.github.io/gahaganmorph.3/landmarking-protocol-3d2.html}{\texttt{LM3d2}});
-to Martin Hinz for fielding questions related to the \texttt{oxcAAR}
-package and Derek Hamilton for his guidance with the chronological
-models; and to Dean C. Adams, Michael L. Collyer, Emma Sherratt, Lauren
-Butaric, and Kersten Bergstrom for their constructive criticisms,
+scans of the Gary dart points from the Cooper, Means, Miller, Poverty
+Point, and Yarbrough sites. Thanks to \ldots{} for their comments on the
+analysis, and to Dean C. Adams, Michael L. Collyer, Emma Sherratt,
+Lauren Butaric, and Kersten Bergstrom for their constructive criticisms,
 general comments, and suggestions throughout the development of this
 research program.
 
